# money-manager/delivery/docs/swagger.yaml
@@ -82,12 +82,12 @@ info:
 paths:
   /healthcheck:
     get:
+      produces:
+      - application/json
       responses:
         "200":
           description: OK
-          schema:
-            type: string
-      summary: Return 200 if service is OK
+      summary: Return 200 and empty json if service is OK
       tags:
       - Health check
   /reports:
